product-api-java/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-svc
spec:
  selector:
    app: product-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
